--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "mux.js": "^6.0.1",
     "npm": "^8.3.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -54,6 +55,8 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "video-react": "^0.14.1",
+    "video.js": "^7.17.0",
+    "videojs-contrib-hls": "^5.15.0",
     "web-vitals": "^2.1.2",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
