--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "videojs-contrib-hls": "^5.15.0",
     "web-vitals": "^2.1.2",
     "webpack": "^5.64.4",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
@@ -67,7 +68,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "eject":"react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
