--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
@@ -36,6 +37,7 @@
     "mini-css-extract-plugin": "^2.4.5",
     "mux.js": "^6.0.1",
     "npm": "^8.3.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -61,7 +63,6 @@
     "videojs-contrib-hls": "^5.15.0",
     "web-vitals": "^2.1.2",
     "webpack": "^5.64.4",
-    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
@@ -70,7 +71,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyzer": "cross-env ANALYZER=true npm-run-all build"
   },
   "eslintConfig": {
     "extends": [
@@ -99,7 +101,9 @@
   "devDependencies": {
     "css-loader": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2"
   },
   "jest": {
     "roots": [
